# SlicerSEEGRecon

./: CMakeLists.txt  DISCLAIMER.md  LICENSE  README.md
Autoelectrodes/: Autoelectrodes.py
Autoelectrodes/Resources/UI/: Autoelectrodes.ui  old_Autoelectrodes.ui
SEEGRecon/: CMakeLists.txt  SEEGRecon.py
SEEGRecon/Resources/UI/: SEEGRecon.ui
SEEGRecon/Resources/userTemplates/: userTemplates.json
SlicerSEEGRecon/: CMakeLists.txt  SlicerSEEGRecon.py
